--- a/src/css/exodus.scss
+++ b/src/css/exodus.scss
@@ -1,5 +1,5 @@
 /* -------------------------------------------------------------------------
-*	EXODUS LANDING PAGE | @version 1.0.4 | @author Vantage Design | @license https://github.com/vantagedesign/exodus-landing-page/blob/master/LICENSE.md
+*	EXODUS LANDING PAGE | @version 1.0.5 | @author Vantage Design | @license https://github.com/vantagedesign/exodus-landing-page/blob/master/LICENSE.md
 *	Stylesheet.
 * ------------------------------------------------------------------------ */
 
@@ -16,7 +16,7 @@
     font-style: normal;
 }
 
-/* Load Bootstrap */
+/* Set variables & load Bootstrap */
 $primary: #eccc68;
 $dark: #212121;
 $light: #f8f9fa;
@@ -30,6 +30,11 @@ $font-family-headings: 'Play', $font-family-sans-serif;
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 	font-family: $font-family-headings;
+}
+
+/* Improve animation performance */
+.collapse, .collapsing{
+	will-change: height;
 }
 
 .vh-100{
@@ -114,16 +119,16 @@ h1:not(.display-1){
 			display: block;
 			height: 100%;
 			position: absolute;
-			transition: all 0.15s ease-out;
+			top: 0;
+			transition: transform 0.15s ease-out;
+			will-change: transform;
 			width: 100%;
 		}
 		&:before{
-			top: 0;
-			transform: rotate(45deg);
+			transform: rotate(45deg) translateY(0);
 		}
 		&:after{
-			top: 0;
-			transform: rotate(-45deg);
+			transform: rotate(-45deg) translateY(0);
 		}
 	}
 	&.collapsed{
@@ -131,20 +136,18 @@ h1:not(.display-1){
 			background-image: none !important;
 			background: $light;
 			&:before{
-				top: -6px;
-				transform: none;
+				transform: translateY(-6px);
 			}
 			&:after{
-				top: 6px;
-				transform: none;
+				transform: translateY(6px);
 			}
 		}
 		&:hover{
 			& > .navbar-toggler-icon:before{
-				top: -8px;
+				transform: translateY(-8px);
 			}
 			& > .navbar-toggler-icon:after{
-				top: 8px;
+				transform: translateY(8px);
 			}
 		}
 	}
